✨ add debug mode

--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -13,6 +13,7 @@
         <option value="Chinese">Chinese</option>
         <option value="Spanish">Spanish</option>
       </select>
+      <label> <input type="checkbox" id="debugMode" /> Debug Mode </label>
       <button id="save">save</button>
     </div>
     <script src="options.js"></script>
