--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -4,8 +4,9 @@
     <title>language setting</title>
   </head>
   <body>
-    <h1>language settign</h1>
+    <h1>language setting</h1>
     <div>
+      <label>Server: <input type="text" id="server" /></label>
       <select id="language">
         <option value="English">English</option>
         <option value="Korean">Korean</option>
