--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -15,6 +15,8 @@
         <option value="Spanish">Spanish</option>
       </select>
       <label> <input type="checkbox" id="debugMode" /> Debug Mode </label>
+      <label for="apiKey">OpenAI API Key:</label>
+      <input type="text" id="apiKey" /><br /><br />
       <button id="save">save</button>
     </div>
     <script src="options.js"></script>
