--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -1,28 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>language setting</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>add-alt options</title>
+    <style>
+      body {
+        margin: 20px;
+      }
+
+      label {
+        display: block;
+        margin: 10px 0 5px;
+      }
+
+      input[type="text"] {
+        font-size: 15px;
+        border-radius: 15px;
+        height: 40px;
+        border: none;
+        margin-top: 5px;
+        box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.22);
+        padding: 5px;
+        padding-left: 10px;
+        transition: 0.3s;
+      }
+      input[type="text"]:hover {
+        box-shadow: 6px 8px 28px rgba(0, 0, 0, 0.25);
+        transition: 0.3s;
+      }
+      input[type="text"]:focus {
+        box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.65);
+        transition: 0.3s;
+        outline: none;
+      }
+
+      button {
+        padding: 10px 20px;
+        border: none;
+        cursor: pointer;
+        box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.22);
+        transition: 0.2s;
+      }
+
+      button:hover {
+        box-shadow: 6px 8px 28px rgba(0, 0, 0, 0.25);
+        transition: 0.2s;
+      }
+
+      #language {
+        font-size: 15px;
+        border-radius: 15px;
+        height: 40px;
+        border: none;
+        margin-top: 5px;
+        box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.22);
+        padding: 5px;
+        padding-left: 10px;
+        transition: 0.3s;
+      }
+    </style>
   </head>
   <body>
-    <h1>language setting</h1>
-    <div>
-      <label>Server: <input type="text" id="server" /></label>
-      <select id="language">
-        <option value="English">English</option>
-        <option value="Korean">Korean</option>
-        <option value="Japanese">Japanese</option>
-        <option value="Chinese">Chinese</option>
-        <option value="Spanish">Spanish</option>
-      </select>
-      <label> <input type="checkbox" id="debugMode" /> Debug Mode </label>
-      <label for="apiKey">OpenAI API Key:</label>
-      <input type="text" id="apiKey" />
-      <div id="apiKeyError" style="color: red; display: none">
-        Invalid API Key
-      </div>
-      <br /><br />
-      <button id="save">save</button>
-    </div>
+    <h1>add-alt options</h1>
+    <label for="server">Server:</label>
+    <input type="text" id="server" name="server" />
+
+    <select id="language">
+      <option value="English">English</option>
+      <option value="Korean">Korean</option>
+      <option value="Japanese">Japanese</option>
+      <option value="Chinese">Chinese</option>
+      <option value="Spanish">Spanish</option>
+    </select>
+
+    <label for="debugMode">Debug Mode:</label>
+    <input type="checkbox" id="debugMode" name="debugMode" />
+
+    <label for="apiKey">API Key:</label>
+    <input type="text" id="apiKey" name="apiKey" />
+
+    <button id="save">Save</button>
+
     <script src="options.js"></script>
   </body>
 </html>
