--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -65,6 +65,7 @@
         padding-left: 10px;
         transition: 0.3s;
         background-color: white;
+        margin-right: 30px;
       }
       select:hover {
         box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.65);
@@ -111,6 +112,13 @@
         <option value="Japanese">Japanese</option>
         <option value="Chinese">Chinese</option>
         <option value="Spanish">Spanish</option>
+      </select>
+
+      <label for="model">model</label>
+      <select id="model">
+        <option value="caption">only caption model</option>
+        <option value="llm">caption model + llm + context</option>
+        <option value="lmm">lmm + context</option>
       </select>
     </div>
 
