--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>대체텍스트 생성기 옵션</title>
     <style>
       body {
-        margin: 20px;
+        width: 400px;
       }
 
       label {
