📝 extention - object alt text

--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -124,6 +124,7 @@
         <option value="caption">캡션 모델만 사용</option>
         <option value="llm">캡션 모델과 llm 사용</option>
         <option value="lmm">lmm 사용</option>
+        <option value="object">객체만 감지</option>
       </select>
     </div>
 
